Fixed mobile issue on iphone safari

--- a/assets/app/css/tourfic-carrentals.css
+++ b/assets/app/css/tourfic-carrentals.css
@@ -1391,7 +1391,6 @@
   display: inline-flex;
   gap: 10px;
   height: 32px;
-  margin-top: 5px;
 }
 
 .single-tf_carrental .tf-single-template__one .tf-car-booking-form .tf-add-extra-section .tf-car-extra-infos .tf-car-single-extra .tf-extra-title .acr-select .acr-dec,
@@ -1413,6 +1412,8 @@
   border: 0px solid;
   padding: 0;
   text-align: center;
+  margin: 0;
+  min-height: inherit;
 }
 
 .single-tf_carrental .tf-single-template__one .tf-car-booking-form .tf-add-extra-section .tf-car-extra-infos .tf-car-single-extra .tf-extra-title .acr-select input:focus {
