--- a/sass/app/css/free/car/modules/single/_sidebar.scss
+++ b/sass/app/css/free/car/modules/single/_sidebar.scss
@@ -158,7 +158,6 @@
                                     display: inline-flex;
                                     gap: 10px;
                                     height: 32px;
-                                    margin-top: 5px;
                                     .acr-dec,
                                     .acr-inc{
                                         color: $color-brand-dark;
@@ -177,6 +176,8 @@
                                         border: 0px solid;
                                         padding: 0;
                                         text-align: center;
+                                        margin: 0;
+                                        min-height: inherit;
                                         &:focus{
                                             box-shadow: none;
                                             outline: none;
